2012-11-21 Max Baak <mbaak@cern.ch>
	M       ConfigMgr.cxx
	M       Makefile
	M       HypoTestTool.cxx
	M       ChannelStyle.h
	* Minor changes to fix compiler problems or warnings on mac. 

2012-11-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * scripts/HistFitter.py: reverted back to -d and -D. See inline comment
                             for explanation. Necessary due to 
                             http://bugs.python.org/issue9338

2012-11-13 Alex Koutsman <alex.koutsman@cern.ch>
	* Utils.cxx : bug fix in ratio calculation, only affects crash with ROOT 5.34.03 while plotting, nothing changes in calculated values

2012-11-13 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       sample.py
	M       systematic.py
	M       MyConfigExample.py
	* Added "shapeStat" systematic, which does statistical errors per sample (i.e. not summed up)

2012-11-13 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/measurement.py: user-set measurement name is now properly used

2012-11-12 Alex Koutsman <alex.koutsman@cern.ch>
	* LinkDef.h : inclusion new ROOT class ChannelStyle for smoother transition to decoupled C++ side, no real change for users
	* ChannelStyle.cxx : new ROOT class ChannelStyle, that defines all plotting options for each channel
	* ChannelStyle.h : new ROOT class ChannelStyle, that defines all plotting options for each channel
	* FitConfig.cxx : moving many functions/functionality to ChannelStyle
	* FitConfig.h : moving many functions/functionality to ChannelStyle
	* Utils.h : adjustments for ChannelStyle
	* Utils.cxx : adjustments for ChannelStyle, addition of flags to GenerateFitAndPlot function to turn on plots at command line
	* python/configManager.py : adjustments for ChannelStyle
	
2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: -D is -d again; using without options gives old
	                         behaviour (before+after)

2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>